# webshells-detector

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
rules/: java_lib_whitelist.yaml
rules/regex/: java_webshell.yaml  jsp_webshell.yaml
rules/yara/java/: suspicious_class.yar
rules/yara/jsp/: webshell_generic.yar
src/wsa/: config.py  graph.py  llm_provider.py  state.py
src/wsa/agents/: __init__.py  advisor.py  commander.py  orchestrator.py  prompts.py  schemas.py  state.py  tools.py  validator.py
src/wsa/cli/: rag.py  scan.py
src/wsa/nodes/: aggregate.py  ast_java.py  ast_jsp.py  classify.py  deobfuscate.py  fast_fail.py  gate.py  ingest.py  llm_judge.py  regex_scan.py  sandbox.py  stat_features.py  yara_scan.py
src/wsa/rag/: __init__.py  corpus.py  embedder.py  index_builder.py  retriever.py  store.py
src/wsa/rules/: regex_engine.py  yara_loader.py
src/wsa/tools/: cfr.py  fs.py  jar_scanner.py  java_ast.py  jsp_preprocess.py
tests/e2e/: test_java_pipeline.py
tests/fixtures/benign/: dashboard.jsp  db_query.jsp  hello.jsp  user_list.jsp
tests/fixtures/hard_negatives/: file_download.jsp  plugin_loader.jsp  (+1 more)
tests/unit/: test_agent_orchestrator.py  test_agent_schemas.py  test_agent_state.py  test_agent_tools.py  test_aggregate.py  test_cfr.py  test_classify.py  test_gate.py  test_graph.py  test_ingest.py  test_jar_scanner.py  test_java_ast.py  test_jsp_preprocess.py  test_llm_judge.py  test_llm_provider.py  test_rag_corpus.py  test_rag_retriever.py  test_rag_store.py  test_regex.py  test_stat.py  test_state.py  test_yara.py
(+8 files in other folders)
